[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-agent"
version = "0.1.0"
description = "A simple code review agent using LangGraph and OpenAI."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]

dependencies = [
    "langchain-openai>=0.0.1",
    "langgraph>=0.0.1",
    "click>=8.0",
    "pydantic>=2.0",
    "pytest>=7.0",
]

[project.scripts]
code-review-agent = "code_review_agent.cli:main"
