[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-code-review"
version = "0.1.0"
description = "A LangGraph based code review tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain==0.2.0",
    "langchain-openai==0.1.0",
    "langgraph==0.1.0",
    "python-dotenv==1.0.0",
    "typer==0.12.0",
    "pydantic==2.7.0",
    "typing_extensions==4.12.2",
]
[project.scripts]
langgraph-code-review = "src.main:app"
